--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.1.0",
     "next-drupal": "1.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
