--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.39"
   }
 }
