--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "preview": "next build && next start"
   },
   "dependencies": {
+    "@types/dateformat": "^5.0.0",
+    "@types/qs": "^6.9.7",
     "axios": "^0.26.0",
+    "dateformat": "^5.0.3",
     "drupal-jsonapi-params": "^2.0.0",
-    "express": "^4.17.3",
     "hds-core": "^1.14.0",
     "hds-react": "^1.14.0",
     "html-react-parser": "^1.4.8",
     "next": "12.1.0",
     "next-drupal": "1.3.0",
     "next-i18next": "^11.0.0",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
