--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dateformat": "^5.0.3",
     "drupal-jsonapi-params": "^2.0.0",
     "hds-core": "^1.14.0",
+    "hds-design-tokens": "^1.15.0",
     "hds-react": "^1.14.0",
     "html-react-parser": "^1.4.8",
     "next": "12.1.0",
