Add react and share.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,16 @@ DRUPAL_PREVIEW_SECRET=
 
 # Disable nextjs telemetry
 NEXT_TELEMETRY_DISABLED=1
+
+## Elasticsearch server url
+ELASTICSEARCH_URL = http://localhost:9200
+
+## Matomo configuration variables.
+## Get these from matomo instance. Define tracked hosts in Matomo.
+MATOMO_SITE_ID=
+MATOMO_URL=
+
+## React and share configuration variables.
+REACT_APP_REACT_AND_SHARE_FI=
+REACT_APP_REACT_AND_SHARE_SV=
+REACT_APP_REACT_AND_SHARE_EN=
