--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ DRUPAL_PREVIEW_SECRET=
 # Disable nextjs telemetry
 NEXT_TELEMETRY_DISABLED=1
 
+REDIS_HOST=
+REDIS_PORT=6379
+REDIS_PASS=
+REDIS_PREFIX=
+
 ## Elasticsearch server url
 ELASTICSEARCH_URL = http://localhost:9200
 
