--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "axios": "^0.26.0",
     "dateformat": "^5.0.3",
     "drupal-jsonapi-params": "^2.0.0",
-    "hds-core": "^1.15.0",
-    "hds-design-tokens": "^1.15.0",
-    "hds-react": "^1.15.0",
+    "hds-core": "2.1",
+    "hds-design-tokens": "2.1",
+    "hds-react": "2.1",
     "html-react-parser": "^1.4.8",
     "next": "12.1.0",
     "next-drupal": "1.4.0",
