--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,10 @@ DRUPAL_PREVIEW_SECRET=
 # Disable nextjs telemetry
 NEXT_TELEMETRY_DISABLED=1
 
-REDIS_HOST=
+## Redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASS=
-REDIS_PREFIX=
+REDIS_PREFIX=tyollisyyspalvelut-ui
 
 ## Elasticsearch server url
 ELASTICSEARCH_URL = http://localhost:9200
