--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,6 @@ DRUPAL_PREVIEW_SECRET=
 # Disable nextjs telemetry
 NEXT_TELEMETRY_DISABLED=1
 
-## Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PREFIX=tyollisyyspalvelut-ui
-
 ## Elasticsearch server url
 ELASTICSEARCH_URL = http://localhost:9200
 
@@ -25,7 +20,12 @@ ELASTICSEARCH_URL = http://localhost:9200
 MATOMO_SITE_ID=
 MATOMO_URL=
 
+## Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PREFIX=tyollisyyspalvelut-ui
+
 ## React and share configuration variables.
-REACT_APP_REACT_AND_SHARE_FI=
-REACT_APP_REACT_AND_SHARE_SV=
-REACT_APP_REACT_AND_SHARE_EN=
+REACT_AND_SHARE_FI=
+REACT_AND_SHARE_SV=
+REACT_AND_SHARE_EN=
