--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ MATOMO_URL=
 
 ## Redis
 REDIS_HOST=localhost
+REDIS_INSTANCE=
+REDIS_PASSWORD=
 REDIS_PORT=6379
 REDIS_PREFIX=tyollisyyspalvelut-ui
 
