THF-182: Updated environment variables.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ DRUPAL_CLIENT_ID=
 DRUPAL_CLIENT_SECRET=
 DRUPAL_PREVIEW_SECRET=
 
+# Public Site URL
+NEXT_PUBLIC_SITE_URL=https://tyollisyyspalvelut.hel.ninja
+
 # Disable nextjs telemetry
 NEXT_TELEMETRY_DISABLED=1
 
