--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "BUILD_PHASE=1 next build",
     "start": "next start",
     "lint": "next lint",
     "preview": "next build && next start"
