--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "axios": "^0.26.0",
     "dateformat": "^5.0.3",
     "drupal-jsonapi-params": "2.1.0",
-    "hds-core": "^2.4.0",
-    "hds-design-tokens": "^2.4.0",
-    "hds-react": "^2.4.0",
+    "hds-core": "2.8.0",
+    "hds-design-tokens": "2.8.0",
+    "hds-react": "2.8.0",
     "html-react-parser": "^1.4.8",
     "ioredis": "^5.1.0",
     "next": "12.2.6",
