--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "8.1.0",
+    "@sentry/nextjs": "^7.26.0",
     "@types/dateformat": "^5.0.0",
     "@types/qs": "^6.9.7",
     "axios": "^0.26.0",
