--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-to-print": "^2.14.11",
     "sass": "^1.51.0",
     "sharp": "^0.31.1",
     "swr": "^1.3.0"
